--- a/.github/workflow/sync-runner.yml
+++ b/.github/workflow/sync-runner.yml
@@ -9,11 +9,11 @@ on:
 jobs:
   sync-images:
     runs-on: ubuntu-latest
-    if: github.repository == 'DaoCloud/public-image-mirror'
+    if: github.repository == 'gebangfeng/docker-images-sync'
     steps:
       - name: Set up runner
         run: |
           wget https://github.com/OpenCIDN/OpenCIDN/releases/download/v0.0.18/runner_linux_amd64 -O /usr/local/bin/runner && chmod +x /usr/local/bin/runner
       - name: Sync Runner
         run: |
-          /usr/local/bin/runner ${{ secrets.NEW_STORAGE_ARGS }} --user '${{ secrets.OCI_USER }}' --queue-token '${{ secrets.QUEUE_TOKEN }}' --queue-url https://queue.m.daocloud.io/apis/v1 --duration 3h --retry=3 --retry-interval=2s
+          /usr/local/bin/runner ${{ secrets.NEW_STORAGE_ARGS }} --user '${{ secrets.OCI_USER }}' --queue-token '${{ secrets.QUEUE_TOKEN }}' --queue-url http://imagetest.gbfeng.com:8082/apis/v1 --duration 3h --retry=3 --retry-interval=2s
