--- a/.github/workflows/sync-runner.yml
+++ b/.github/workflows/sync-runner.yml
@@ -16,4 +16,4 @@ jobs:
           wget https://github.com/OpenCIDN/OpenCIDN/releases/download/v0.0.18/runner_linux_amd64 -O /usr/local/bin/runner && chmod +x /usr/local/bin/runner
       - name: Sync Runner
         run: |
-          /usr/local/bin/runner ${{ secrets.NEW_STORAGE_ARGS }} --user '${{ secrets.OCI_USER }}' --queue-token '${{ secrets.QUEUE_TOKEN }}' --queue-url http://imagetest.gbfeng.com:8082/apis/v1 --duration 3h --retry=3 --retry-interval=2s
+          /usr/local/bin/runner ${{ secrets.NEW_STORAGE_ARGS }}  --queue-token '${{ secrets.QUEUE_TOKEN }}' --queue-url http://imagetest.gbfeng.com:8082/apis/v1 --duration 3h --retry=3 --retry-interval=2s
