--- a/.github/workflows/sync-runner.yml
+++ b/.github/workflows/sync-runner.yml
@@ -16,4 +16,4 @@ jobs:
           wget https://github.com/OpenCIDN/OpenCIDN/releases/download/v0.0.18/runner_linux_amd64 -O /usr/local/bin/runner && chmod +x /usr/local/bin/runner
       - name: Sync Runner
         run: |
-          /usr/local/bin/runner 
+          /usr/local/bin/runner ${{ secrets.NEW_STORAGE_ARGS }}
